--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "materialize-css": "^1.0.0",
     "nodemon": "^1.19.4",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.15",
     "react-dom": "^16.11.0",
+    "react-materialize": "^3.4.1",
     "react-scripts": "3.2.0"
   },
   "scripts": {
