--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "create-react-class": "^15.6.3",
     "materialize-css": "^1.0.0",
     "nodemon": "^1.19.4",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.15",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.11.0",
     "react-materialize": "^3.4.1",
     "react-router": "^5.1.2",
