--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.15",
     "react-bootstrap-date-picker": "^5.1.0",
-    "react-datepicker": "^2.10.1",
+    "react-datepicker": "2.3.0",
     "react-dom": "^16.11.0",
     "react-materialize": "^3.4.1",
     "react-router": "^5.1.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-toastify": "^5.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
