--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@trendmicro/react-sidenav": "^0.4.5",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "create-react-class": "^15.6.3",
@@ -18,6 +19,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-slick": "^0.25.2",
     "react-toastify": "^5.4.1"
   },
   "scripts": {
