--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "create-react-class": "^15.6.3",
+    "history": "^4.10.1",
     "materialize-css": "^1.0.0",
     "nodemon": "^1.19.4",
     "react": "^16.11.0",
