--- a/package.json
+++ b/package.json
@@ -8,20 +8,16 @@
     "bootstrap": "^4.3.1",
     "create-react-class": "^15.6.3",
     "history": "^4.10.1",
-    "materialize-css": "^1.0.0",
     "nodemon": "^1.19.4",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.15",
-    "react-bootstrap-date-picker": "^5.1.0",
     "react-datepicker": "2.3.0",
     "react-dom": "^16.11.0",
-    "react-materialize": "^3.4.1",
+    "react-responsive-modal": "^4.0.1",
     "react-router": "^5.1.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
-    "react-slick": "^0.25.2",
-    "react-toastify": "^5.4.1"
+    "react-scripts": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
