--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "nodemon": "^1.19.4",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.15",
+    "react-columns": "^1.2.1",
     "react-datepicker": "2.3.0",
     "react-dom": "^16.11.0",
     "react-responsive-modal": "^4.0.1",
