--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-columns": "^1.2.1",
     "react-datepicker": "2.3.0",
     "react-dom": "^16.11.0",
+    "react-notify-toast": "^0.5.1",
     "react-responsive-modal": "^4.0.1",
     "react-router": "^5.1.2",
     "react-router-bootstrap": "^0.25.0",
