--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router": "^5.1.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^3.3.0",
+    "react-search-field": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
